--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Architect theme
-description: Architect is a theme for GitHub Pages.
+title: 云起的主页
+description: 阅读 思考 分享
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
