--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 云起的主页 # name of the site
 author: 云起 # name of site's author
 email: test@test.com # email of site's author
 url: https://david2005yunqi.github.io # root address of the site
-baseurl: "/blog" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   阅读 学习 分享.
 
