--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,11 +1,11 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: info
+  - title: 主页
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
+      - title: 云起的主页
+      - title: github
+        url: https://github.com/david2005yunqi
 
   - title: all posts
     post_list:
@@ -23,7 +23,7 @@ entries:
 
   - title: rss
     url: feed.xml
-  
+
   - title: another list
     entries:
       - title: with subitems
@@ -31,6 +31,7 @@ entries:
           - title: with subsubitems
           - title: example page
             url: about
-  - title: PRO TIP
+
+  - title: 其他
     entries:
-      - title: to edit this menu, edit _data/menu.yml file
+      - title: 没有什么别的了
